Solve dropdown cause layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,6 +72,12 @@ nextjs-portal {
   }
 }
 
+html body[data-scroll-locked] {
+	overflow-y: visible !important;
+  --removed-body-scroll-bar-size: 0 !important;
+	margin-right: 0px !important;
+}
+
 /* Make map container fill available space */
 .map-container {
   width: 100%;
